--- a/config/locales/po/da/api.po
+++ b/config/locales/po/da/api.po
@@ -1,153 +1,130 @@
-# #-#-#-#-#  moments.po (Backend (YouVersion))  #-#-#-#-#
-# API Strings
+# Danish translations for Backend (YouVersion).
+# Copyright (C) 2014 LifeChurch.tv
+# This file is distributed under the same license as the Backend (YouVersion) project.
 #
-# Translators:
-# Translators:
-# Translators:
-# Bjørn Pavlak <bjoern.pavlak@gmail.com>, 2013-2014
-# #-#-#-#-#  notifications.po (Backend (YouVersion))  #-#-#-#-#
-# API Strings
-#
-# Translators:
-# Translators:
-# Translators:
-# Bjørn Pavlak <bjoern.pavlak@gmail.com>, 2013-2014
-# #-#-#-#-#  share.po (Backend (YouVersion))  #-#-#-#-#
-# App sharing
-#
-# Translators:
-# Translators:
-# Bjørn Pavlak <bjoern.pavlak@gmail.com>, 2013
-# Bjørn Pavlak <bjoern.pavlak@gmail.com>, 2013-2014
 #, fuzzy
 msgid ""
 msgstr ""
-"#-#-#-#-#  moments.po (Backend (YouVersion))  #-#-#-#-#\n"
-"Project-Id-Version: Backend (YouVersion)\n"
-"Report-Msgid-Bugs-To: brad.belyeu@lifechurch.tv\n"
-"POT-Creation-Date: 2013-08-30 11:23-0500\n"
-"PO-Revision-Date: 2014-05-20 21:17+0000\n"
-"Last-Translator: Bjørn Pavlak <bjoern.pavlak@gmail.com>\n"
-"Language-Team: Danish (http://www.transifex.com/projects/p/yv-backend/language/da/)\n"
+"#-#-#-#-#  moments.po (Backend (YouVersion) 1.0)  #-#-#-#-#\n"
+"Project-Id-Version: Backend (YouVersion) 1.0\n"
+"Report-Msgid-Bugs-To: developers@youversion.com\n"
+"POT-Creation-Date: 2014-09-25 16:14-0600\n"
+"PO-Revision-Date: 2014-09-25 16:14-0600\n"
+"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"Language-Team: da <LL@li.org>\n"
+"Plural-Forms: nplurals=2; plural=(n != 1)\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: da\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"#-#-#-#-#  notifications.po (Backend (YouVersion))  #-#-#-#-#\n"
-"Project-Id-Version: Backend (YouVersion)\n"
-"Report-Msgid-Bugs-To: brad.belyeu@lifechurch.tv\n"
-"POT-Creation-Date: 2013-08-30 11:23-0500\n"
-"PO-Revision-Date: 2014-05-20 21:22+0000\n"
-"Last-Translator: Bjørn Pavlak <bjoern.pavlak@gmail.com>\n"
-"Language-Team: Danish (http://www.transifex.com/projects/p/yv-backend/language/da/)\n"
+"Generated-By: Babel 1.3\n"
+"#-#-#-#-#  notifications.po (Backend (YouVersion) 1.0)  #-#-#-#-#\n"
+"Project-Id-Version: Backend (YouVersion) 1.0\n"
+"Report-Msgid-Bugs-To: developers@youversion.com\n"
+"POT-Creation-Date: 2014-09-25 16:21-0600\n"
+"PO-Revision-Date: 2014-09-25 16:21-0600\n"
+"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"Language-Team: da <LL@li.org>\n"
+"Plural-Forms: nplurals=2; plural=(n != 1)\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: da\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"#-#-#-#-#  share.po (Backend (YouVersion))  #-#-#-#-#\n"
-"Project-Id-Version: Backend (YouVersion)\n"
-"Report-Msgid-Bugs-To: chris.vaughn@lifechurch.tv\n"
-"POT-Creation-Date: 2013-04-30 11:23-0500\n"
-"PO-Revision-Date: 2014-07-11 15:01+0000\n"
-"Last-Translator: chrisvaughn <chris.vaughn@lifechurch.tv>\n"
-"Language-Team: Danish (http://www.transifex.com/projects/p/yv-backend/language/da/)\n"
+"Generated-By: Babel 1.3\n"
+"#-#-#-#-#  share.po (Backend (YouVersion) 1.0)  #-#-#-#-#\n"
+"Project-Id-Version: Backend (YouVersion) 1.0\n"
+"Report-Msgid-Bugs-To: developers@youversion.com\n"
+"POT-Creation-Date: 2014-09-25 16:06-0600\n"
+"PO-Revision-Date: 2014-09-25 16:06-0600\n"
+"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"Language-Team: da <LL@li.org>\n"
+"Plural-Forms: nplurals=2; plural=(n != 1)\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: da\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
-
-msgid "moment.system.bible_series_promo.title"
-msgstr "<i>Bibel Serier</i>"
-
-msgid "moment.system.bible_series_promo.body"
-msgstr "Se <i>Bibel Serien</i> i aften!"
-
-msgid "moment.bookmark.title"
-msgstr "{name} bogmærkede <b>{reference_human}</b>"
-
-msgid "moment.bookmark.self.title"
-msgstr "Du bogmærkede <b>{reference_human}</b>"
-
-msgid "moment.friendship.title"
-msgstr "{user_name} er nu venner med <b>{friend_name}</b>"
-
-msgid "moment.friendship.self.title"
-msgstr "Du er nu venner med <b>{friend_name}</b>"
-
-msgid "moment.highlight.title"
-msgstr "{name} markeret <b>{reference_human}</b>"
-
-msgid "moment.highlight.self.title"
-msgstr "Du markerede <b>{reference_human}</b>"
-
-msgid "moment.note.title"
-msgstr "{name} tilføjede en note, <b>{title}</b>"
-
-msgid "moment.note.self.title"
-msgstr "Du tilføjede en note, <b>{title}</b>"
-
-msgid "moment.bible.download.title"
-msgstr "{name} hentede versionen, <b>{version}</b>"
-
-msgid "moment.bible.download.self.title"
-msgstr "Du hentede versionen, <b>{version}</b>"
-
-msgid "moment.plan_subscription.title"
-msgstr "{name} startede en ny plan"
-
-msgid "moment.plan_subscription.self.title"
-msgstr "Du startede en ny plan"
-
-msgid "moment.plan_segment_completion.title"
-msgstr "{name} færdiggjorde dag  <b>{segment}</b> af planen, <b>{title}</b>"
-
-msgid "moment.plan_segment_completion.self.title"
-msgstr "Du færdiggjorde dag <b>{segment}</b> af planen, <b>{title}</b>"
-
-msgid "moment.plan_segment_completion.body"
-msgstr "Dag {segment} af {total_segments} ({percent_complete}%)"
-
-msgid "moment.plan_completion.title"
-msgstr "{name} færdiggjorde en plan"
-
-msgid "moment.plan_completion.self.title"
-msgstr "Du færdiggjorde en plan"
-
-msgid "moment.badge.earned.title"
-msgstr "{name} fortjente <b>{title}</b> mærket"
+"Generated-By: Babel 1.3\n"
 
 msgid "moment.badge.earned.self.title"
 msgstr "Du fortjente <b>{title}</b> mærket"
 
-msgid "moment.video.watched.title"
-msgstr "{name} så <b>{title}</b>"
+msgid "moment.badge.earned.title"
+msgstr "{name} fortjente <b>{title}</b> mærket"
 
-msgid "moment.video.watched.self.title"
-msgstr "Du så <b>{title}</b>"
+msgid "moment.bible.download.self.title"
+msgstr "Du hentede versionen, <b>{version}</b>"
+
+msgid "moment.bible.download.title"
+msgstr "{name} hentede versionen, <b>{version}</b>"
+
+msgid "moment.bookmark.self.title"
+msgstr "Du bogmærkede <b>{reference_human}</b>"
+
+msgid "moment.bookmark.title"
+msgstr "{name} bogmærkede <b>{reference_human}</b>"
+
+msgid "moment.friendship.self.title"
+msgstr "Du er nu venner med <b>{friend_name}</b>"
+
+msgid "moment.friendship.title"
+msgstr "{user_name} er nu venner med <b>{friend_name}</b>"
+
+msgid "moment.highlight.self.title"
+msgstr "Du markerede <b>{reference_human}</b>"
+
+msgid "moment.highlight.title"
+msgstr "{name} markeret <b>{reference_human}</b>"
+
+msgid "moment.note.self.title"
+msgstr "Du tilføjede en note, <b>{title}</b>"
+
+msgid "moment.note.title"
+msgstr "{name} tilføjede en note, <b>{title}</b>"
+
+msgid "moment.plan_completion.self.title"
+msgstr "Du færdiggjorde en plan"
+
+msgid "moment.plan_completion.title"
+msgstr "{name} færdiggjorde en plan"
+
+msgid "moment.plan_segment_completion.body"
+msgstr "Dag {segment} af {total_segments} ({percent_complete}%)"
+
+msgid "moment.plan_segment_completion.self.title"
+msgstr "Du færdiggjorde dag <b>{segment}</b> af planen, <b>{title}</b>"
+
+msgid "moment.plan_segment_completion.title"
+msgstr "{name} færdiggjorde dag  <b>{segment}</b> af planen, <b>{title}</b>"
+
+msgid "moment.plan_subscription.self.title"
+msgstr "Du startede en ny plan"
+
+msgid "moment.plan_subscription.title"
+msgstr "{name} startede en ny plan"
+
+msgid "moment.system.bible_series_promo.body"
+msgstr "Se <i>Bibel Serien</i> i aften!"
+
+msgid "moment.system.bible_series_promo.title"
+msgstr "<i>Bibel Serier</i>"
 
 msgid "moment.system.find_friends.title"
 msgstr "Bibel App´en er endnu bedre med venner. Søg i dine kontakter for at finde venner."
 
-msgid "notifications.friendships.offer"
-msgstr "{name} vil være din ven på YouVersion"
+msgid "moment.video.watched.self.title"
+msgstr "Du så <b>{title}</b>"
 
-msgid "notifications.friendships.accept"
-msgstr "{name} accepterede din venne forespørgsel"
-
-msgid "notifications.friendships.nowfriends"
-msgstr "{name} er nu din ven"
-
-msgid "notifications.friendships.suggestion"
-msgstr "Vil du være venner med {name} på YouVersion?"
+msgid "moment.video.watched.title"
+msgstr "{name} så <b>{title}</b>"
 
 msgid "notifications.comments.moment.mine.bookmark"
 msgstr "{name} kommenterede dit bogmærke: “{comment}”"
 
+msgid "notifications.comments.moment.mine.friendship"
+msgstr "{name} kommenterede på dit nye venskab med  {friend_name}: “{comment}”"
+
 msgid "notifications.comments.moment.mine.highlight"
 msgstr "{name} kommenterede din markering: “{comment}”"
+
+msgid "notifications.comments.moment.mine.note"
+msgstr "{name} kommenterede på din note: “{comment}”"
 
 msgid "notifications.comments.moment.mine.plan_activity"
 msgstr "{name} kommenterede på din plan: “{comment}”"
@@ -155,26 +132,65 @@ msgstr "{name} kommenterede på din plan: “{comment}”"
 msgid "notifications.comments.moment.mine.plan_activity.push"
 msgstr "{name} kommenterede på din Bibel Plan: “{comment}”"
 
-msgid "notifications.comments.moment.mine.friendship"
-msgstr "{name} kommenterede på dit nye venskab med  {friend_name}: “{comment}”"
+msgid "notifications.comments.moments.friend.bookmark"
+msgstr "{commenter_name} kommenterede også på {moment_owner_name}'s bogmærke: “{comment}”"
 
-msgid "notifications.comments.moment.mine.note"
-msgstr "{name} kommenterede på din note: “{comment}”"
+msgid "notifications.comments.moments.friend.friendship"
+msgstr "{commenter_name} kommenterede også på {moment_owner_name}'s nye venskab med {friend_name}: “{comment}”"
+
+msgid "notifications.comments.moments.friend.highlight"
+msgstr "{commenter_name} kommenterede også på {moment_owner_name}'s highlight: “{comment}”"
+
+msgid "notifications.comments.moments.friend.note"
+msgstr "{commenter_name} kommenterede også på {moment_owner_name}'s note: “{comment}”"
+
+msgid "notifications.comments.moments.friend.owner.bookmark"
+msgstr "{moment_owner_name} kommenterede også på deres bogmærke: “{comment}”"
+
+msgid "notifications.comments.moments.friend.owner.friendship"
+msgstr "{moment_owner_name} kommenterede også på deres nye venskab med {friend_name}: “{comment}”"
+
+msgid "notifications.comments.moments.friend.owner.highlight"
+msgstr "{moment_owner_name} kommenterede også på deres markering: “{comment}”"
+
+msgid "notifications.comments.moments.friend.owner.note"
+msgstr "{moment_owner_name} kommenterede også på deres note: “{comment}”"
+
+msgid "notifications.comments.moments.friend.owner.plan_activity"
+msgstr "{moment_owner_name} kommenterede også på deres Plan: “{comment}”"
+
+msgid "notifications.comments.moments.friend.owner.plan_activity.push"
+msgstr "{moment_owner_name} kommenterede også på deres Bibel Plan: “{comment}”"
+
+msgid "notifications.comments.moments.friend.plan_activity"
+msgstr "{commenter_name} kommenterede også på {moment_owner_name}'s Plan: “{comment}”"
+
+msgid "notifications.comments.moments.friend.plan_activity.push"
+msgstr "{commenter_name} kommenterede også på {moment_owner_name}'s Bibel Plan: “{comment}”"
+
+msgid "notifications.friendships.accept"
+msgstr "{name} accepterede din venne forespørgsel"
+
+msgid "notifications.friendships.nowfriends"
+msgstr "{name} er nu din ven"
+
+msgid "notifications.friendships.offer"
+msgstr "{name} vil være din ven på YouVersion"
+
+msgid "notifications.friendships.suggestion"
+msgstr "Vil du være venner med {name} på YouVersion?"
 
 msgid "notifications.likes.moment.mine.bookmark"
 msgstr "{name} synes om dit bogmærke, {reference_human}"
 
+msgid "notifications.likes.moment.mine.friendship"
+msgstr "{name} synes om dit nye venskab med {friend_name}"
+
 msgid "notifications.likes.moment.mine.highlight"
 msgstr "{name} synes om din markering, {reference_human}"
 
-msgid "notifications.likes.moment.mine.plan_activity"
-msgstr "{name} synes om din Plan aktivitet"
-
-msgid "notifications.likes.moment.mine.plan_activity.push"
-msgstr "{name} synes om din Bibel Plan aktivitet"
-
-msgid "notifications.likes.moment.mine.friendship"
-msgstr "{name} synes om dit nye venskab med {friend_name}"
+msgid "notifications.likes.moment.mine.note.no_title_no_reference"
+msgstr "{name} synes om din note"
 
 msgid "notifications.likes.moment.mine.note.reference"
 msgstr "{name} synes om din note far {reference_human}"
@@ -182,44 +198,11 @@ msgstr "{name} synes om din note far {reference_human}"
 msgid "notifications.likes.moment.mine.note.title"
 msgstr "{name} synes om din note, “{title}”"
 
-msgid "notifications.likes.moment.mine.note.no_title_no_reference"
-msgstr "{name} synes om din note"
+msgid "notifications.likes.moment.mine.plan_activity"
+msgstr "{name} synes om din Plan aktivitet"
 
-msgid "notifications.comments.moments.friend.owner.bookmark"
-msgstr "{moment_owner_name} kommenterede også på deres bogmærke: “{comment}”"
-
-msgid "notifications.comments.moments.friend.bookmark"
-msgstr "{commenter_name} kommenterede også på {moment_owner_name}'s bogmærke: “{comment}”"
-
-msgid "notifications.comments.moments.friend.owner.friendship"
-msgstr "{moment_owner_name} kommenterede også på deres nye venskab med {friend_name}: “{comment}”"
-
-msgid "notifications.comments.moments.friend.friendship"
-msgstr "{commenter_name} kommenterede også på {moment_owner_name}'s nye venskab med {friend_name}: “{comment}”"
-
-msgid "notifications.comments.moments.friend.owner.highlight"
-msgstr "{moment_owner_name} kommenterede også på deres markering: “{comment}”"
-
-msgid "notifications.comments.moments.friend.highlight"
-msgstr "{commenter_name} kommenterede også på {moment_owner_name}'s highlight: “{comment}”"
-
-msgid "notifications.comments.moments.friend.owner.plan_activity"
-msgstr "{moment_owner_name} kommenterede også på deres Plan: “{comment}”"
-
-msgid "notifications.comments.moments.friend.plan_activity"
-msgstr "{commenter_name} kommenterede også på {moment_owner_name}'s Plan: “{comment}”"
-
-msgid "notifications.comments.moments.friend.owner.plan_activity.push"
-msgstr "{moment_owner_name} kommenterede også på deres Bibel Plan: “{comment}”"
-
-msgid "notifications.comments.moments.friend.plan_activity.push"
-msgstr "{commenter_name} kommenterede også på {moment_owner_name}'s Bibel Plan: “{comment}”"
-
-msgid "notifications.comments.moments.friend.owner.note"
-msgstr "{moment_owner_name} kommenterede også på deres note: “{comment}”"
-
-msgid "notifications.comments.moments.friend.note"
-msgstr "{commenter_name} kommenterede også på {moment_owner_name}'s note: “{comment}”"
+msgid "notifications.likes.moment.mine.plan_activity.push"
+msgstr "{name} synes om din Bibel Plan aktivitet"
 
 msgid "notifications.moments.create.bookmark"
 msgstr "{name} bogmærkede {reference_human}"
@@ -227,20 +210,14 @@ msgstr "{name} bogmærkede {reference_human}"
 msgid "notifications.moments.create.highlight"
 msgstr "{name} markerede {reference_human}"
 
+msgid "notifications.moments.create.note.no_title_no_reference"
+msgstr "{name} tilføjede en note"
+
 msgid "notifications.moments.create.note.reference"
 msgstr "{name} tilføjede en note på {reference_human}"
 
 msgid "notifications.moments.create.note.title"
 msgstr "{name} atilføjede en note, “{title}”"
-
-msgid "notifications.moments.create.note.no_title_no_reference"
-msgstr "{name} tilføjede en note"
-
-msgid "notifications.moments.create.plan_subscription"
-msgstr "{name} startede en ny Plan, {title}"
-
-msgid "notifications.moments.create.plan_subscription.push"
-msgstr "{name} startede en ny Bibel Plan, {title}"
 
 msgid "notifications.moments.create.plan_completion"
 msgstr "{name} færdiggjorde deres Plan, {title}"
@@ -248,23 +225,17 @@ msgstr "{name} færdiggjorde deres Plan, {title}"
 msgid "notifications.moments.create.plan_completion.push"
 msgstr "{name} færdiggjorde deres Bibel Plan, {title}"
 
-#. TRANSLATORS: Plural test
-msgid "notifications.friendships.count"
-msgid_plural "You have %d friend requests"
-msgstr[0] "Du har en venne forespørgsel"
-msgstr[1] "Du har %d venne forespørgsler"
+msgid "notifications.moments.create.plan_subscription"
+msgstr "{name} startede en ny Plan, {title}"
+
+msgid "notifications.moments.create.plan_subscription.push"
+msgstr "{name} startede en ny Bibel Plan, {title}"
 
 msgid "notifications.system.test"
 msgstr "Hent vores Kids Bibel App nu!!!"
 
-msgid "share.invite_sms_prefix"
-msgstr "Fra {name}:"
-
-msgid "share.invite_sms"
-msgstr "Har du Bibel App´en fra YouVersion? Jeg elsker den og tror at det vil du også gøre. Her er et link:"
-
-msgid "share.invite_email_subject"
-msgstr "Brug Bibel App ligesom mig"
+msgid "share.find_friends.invite_email_html"
+msgstr "<p> Hej! </p><p>Jeg bruger Bibel App´en fra YouVersion og ønsker at dele det med dig. Hvis du er ny i forhold til den app, er det en enkel måde at bringe skønheden og sandheden fra Bibelen i hverdagen. </p><p> <strong> Få Bibel App: </strong> Læs, se, lyt og del på din smartphone eller tablet, og online på Bible.com </p><p> <strong> Sæt Din konto op: </strong> abonner på Bibel Planer og få adgang til bogmærker, fremhævelser og noter på tværs af enheder </p><p> <strong>  Tilføj venner (Som mig!): </strong> udforsk og diskuter Bibelen med mennesker, du holder </p><p>  det er alt sammen i Bibel App´en - kom i gang her: </p>"
 
 msgid "share.invite_email_body"
 msgstr ""
@@ -278,19 +249,28 @@ msgstr ""
 "\n"
 "Tilføj venner (som mig!): Udforsk og diskuter Bibelen med mennesker, du holder af. \n"
 "\n"
-"Alt er i Bibel  App´en - kom i gang her:"
+"Alt er i Bibel  App´en - kom i gang her: "
 
-msgid "share.find_friends.invite_email_html"
-msgstr "<p> Hej! </p><p>Jeg bruger Bibel App´en fra YouVersion og ønsker at dele det med dig. Hvis du er ny i forhold til den app, er det en enkel måde at bringe skønheden og sandheden fra Bibelen i hverdagen. </p><p> <strong> Få Bibel App: </strong> Læs, se, lyt og del på din smartphone eller tablet, og online på Bible.com </p><p> <strong> Sæt Din konto op: </strong> abonner på Bibel Planer og få adgang til bogmærker, fremhævelser og noter på tværs af enheder </p><p> <strong>  Tilføj venner (Som mig!): </strong> udforsk og diskuter Bibelen med mennesker, du holder </p><p>  det er alt sammen i Bibel App´en - kom i gang her: </p>"
-
-msgid "share.invite_twitter"
-msgstr "@YouVersion´s Bible App har en permanent ikon på min startskærm. Læs, se, lyt og dele ... alt i en gratis app: "
-
-msgid "share.invite_twitter_direct"
-msgstr "Har du Bibel App´en fra @YouVersion? Jeg elsker den og tror at det vil du også gøre. Her er et link:"
+msgid "share.invite_email_subject"
+msgstr "Brug Bibel App ligesom mig"
 
 msgid "share.invite_facebook"
 msgstr "Jeg elsker Bibel App´en! Den hjælper mig med til gøre Bibelen til en del af min hverdag. Den lader mig markere, høre lyd bibler, skrive noter, følge læse planer...med tilhørende vidoer! Hent den nu (det er gratis):"
 
 msgid "share.invite_facebook_direct"
 msgstr "Har du Bibel App´en? Jeg elsker den og tror at det vil du også gøre. Her er et link:"
+
+msgid "share.invite_sms"
+msgstr "Har du Bibel App´en fra YouVersion? Jeg elsker den og tror at det vil du også gøre. Her er et link:"
+
+msgid "share.invite_sms_prefix"
+msgstr "Fra {name}:"
+
+msgid "share.invite_twitter"
+msgstr "@YouVersion´s Bible App har en permanent ikon på min startskærm. Læs, se, lyt og dele ... alt i en gratis app:"
+
+msgid "share.invite_twitter_direct"
+msgstr "Har du Bibel App´en fra @YouVersion? Jeg elsker den og tror at det vil du også gøre. Her er et link:"
+
+msgid "notifications.people.contact.joined"
+msgstr "{name} er lige tilmeldt YouVersion. Marker for at tilføje dem som Ven."
