--- a/config/locales/po/sw/api.po
+++ b/config/locales/po/sw/api.po
@@ -1,157 +1,130 @@
-# #-#-#-#-#  moments.po (Backend (YouVersion))  #-#-#-#-#
-# API Strings
+# Swahili translations for Backend (YouVersion).
+# Copyright (C) 2014 LifeChurch.tv
+# This file is distributed under the same license as the Backend (YouVersion) project.
 #
-# Translators:
-# Translators:
-# Translators:
-# chrisvaughn <chris.vaughn@lifechurch.tv>, 2014
-# JUDITH LESIKA <jlesika@gmail.com>, 2014
-# shikow <nduatijane@gmail.com>, 2013
-# miriammnyuku <tressy58@yahoo.com>, 2014
-# #-#-#-#-#  notifications.po (Backend (YouVersion))  #-#-#-#-#
-# API Strings
-#
-# Translators:
-# Translators:
-# Translators:
-# chrisvaughn <chris.vaughn@lifechurch.tv>, 2014
-# miriammnyuku <tressy58@yahoo.com>, 2014
-# #-#-#-#-#  share.po (Backend (YouVersion))  #-#-#-#-#
-# App sharing
-#
-# Translators:
-# Translators:
-# miriammnyuku <tressy58@yahoo.com>, 2014
-# miriammnyuku <tressy58@yahoo.com>, 2014
 #, fuzzy
 msgid ""
 msgstr ""
-"#-#-#-#-#  moments.po (Backend (YouVersion))  #-#-#-#-#\n"
-"Project-Id-Version: Backend (YouVersion)\n"
-"Report-Msgid-Bugs-To: brad.belyeu@lifechurch.tv\n"
-"POT-Creation-Date: 2013-08-30 11:23-0500\n"
-"PO-Revision-Date: 2014-06-23 17:52+0000\n"
-"Last-Translator: chrisvaughn <chris.vaughn@lifechurch.tv>\n"
-"Language-Team: Swahili (http://www.transifex.com/projects/p/yv-backend/language/sw/)\n"
+"#-#-#-#-#  moments.po (Backend (YouVersion) 1.0)  #-#-#-#-#\n"
+"Project-Id-Version: Backend (YouVersion) 1.0\n"
+"Report-Msgid-Bugs-To: developers@youversion.com\n"
+"POT-Creation-Date: 2014-09-25 16:14-0600\n"
+"PO-Revision-Date: 2014-09-25 16:14-0600\n"
+"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"Language-Team: sw <LL@li.org>\n"
+"Plural-Forms: nplurals=2; plural=(n != 1)\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: sw\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"#-#-#-#-#  notifications.po (Backend (YouVersion))  #-#-#-#-#\n"
-"Project-Id-Version: Backend (YouVersion)\n"
-"Report-Msgid-Bugs-To: brad.belyeu@lifechurch.tv\n"
-"POT-Creation-Date: 2013-08-30 11:23-0500\n"
-"PO-Revision-Date: 2014-06-12 16:40+0000\n"
-"Last-Translator: miriammnyuku <tressy58@yahoo.com>\n"
-"Language-Team: Swahili (http://www.transifex.com/projects/p/yv-backend/language/sw/)\n"
+"Generated-By: Babel 1.3\n"
+"#-#-#-#-#  notifications.po (Backend (YouVersion) 1.0)  #-#-#-#-#\n"
+"Project-Id-Version: Backend (YouVersion) 1.0\n"
+"Report-Msgid-Bugs-To: developers@youversion.com\n"
+"POT-Creation-Date: 2014-09-25 16:21-0600\n"
+"PO-Revision-Date: 2014-09-25 16:21-0600\n"
+"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"Language-Team: sw <LL@li.org>\n"
+"Plural-Forms: nplurals=2; plural=(n != 1)\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: sw\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"#-#-#-#-#  share.po (Backend (YouVersion))  #-#-#-#-#\n"
-"Project-Id-Version: Backend (YouVersion)\n"
-"Report-Msgid-Bugs-To: chris.vaughn@lifechurch.tv\n"
-"POT-Creation-Date: 2013-04-30 11:23-0500\n"
-"PO-Revision-Date: 2014-03-20 16:33+0000\n"
-"Last-Translator: miriammnyuku <tressy58@yahoo.com>\n"
-"Language-Team: Swahili (http://www.transifex.com/projects/p/yv-backend/language/sw/)\n"
+"Generated-By: Babel 1.3\n"
+"#-#-#-#-#  share.po (Backend (YouVersion) 1.0)  #-#-#-#-#\n"
+"Project-Id-Version: Backend (YouVersion) 1.0\n"
+"Report-Msgid-Bugs-To: developers@youversion.com\n"
+"POT-Creation-Date: 2014-09-25 16:07-0600\n"
+"PO-Revision-Date: 2014-09-25 16:07-0600\n"
+"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"Language-Team: sw <LL@li.org>\n"
+"Plural-Forms: nplurals=2; plural=(n != 1)\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: sw\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
-
-msgid "moment.system.bible_series_promo.title"
-msgstr "<i>Mfululizo wa bibilia</i>"
-
-msgid "moment.system.bible_series_promo.body"
-msgstr "Tazama <i>mfululizo wa Bibilia</i> leo usiku!"
-
-msgid "moment.bookmark.title"
-msgstr "{name} alialamisha <b>{reference_human}</b>"
-
-msgid "moment.bookmark.self.title"
-msgstr "Ulialamisha <b>{reference_human}</b>"
-
-msgid "moment.friendship.title"
-msgstr "{user_name} sasa ni rafiki na <b>{friend_name}</b>"
-
-msgid "moment.friendship.self.title"
-msgstr "Sasa wewe ni rafiki na<b>{friend_name}</b>"
-
-msgid "moment.highlight.title"
-msgstr "{name} alibainisha  <b>{reference_human}</b>"
-
-msgid "moment.highlight.self.title"
-msgstr "Ulibainisha </b>{reference_human}</b>"
-
-msgid "moment.note.title"
-msgstr "{name} aliongeza elezo ,<b>{title}</b>"
-
-msgid "moment.note.self.title"
-msgstr "uliongeza elezo ,<b>{title}</b>"
-
-msgid "moment.bible.download.title"
-msgstr "{name} alidownload toleo, <b>{version}</b>"
-
-msgid "moment.bible.download.self.title"
-msgstr "Ulidownload toleo, <b>{version}</b>"
-
-msgid "moment.plan_subscription.title"
-msgstr "{name} umeanza mpango "
-
-msgid "moment.plan_subscription.self.title"
-msgstr "Mpango umeanzwa"
-
-msgid "moment.plan_segment_completion.title"
-msgstr "{name} amemalliza siku <b>{segment}</b> wa mpango, <b>{title}</b>"
-
-msgid "moment.plan_segment_completion.self.title"
-msgstr "Umemaliza siku <b>{segment}</b> wa mpango, <b>{title}</b>"
-
-msgid "moment.plan_segment_completion.body"
-msgstr "Siku {segment} cha {total_segments} ({percent_complete}%)"
-
-msgid "moment.plan_completion.title"
-msgstr "{name} amemaliza mpango"
-
-msgid "moment.plan_completion.self.title"
-msgstr "Mpango umekamilika"
-
-msgid "moment.badge.earned.title"
-msgstr "{name} alipata beji ya <b>{title}</b>"
+"Generated-By: Babel 1.3\n"
 
 msgid "moment.badge.earned.self.title"
 msgstr "Ulipata beji ya <b>{title}</b>"
 
-msgid "moment.video.watched.title"
-msgstr "{name} alitazama <b>{title}</b>"
+msgid "moment.badge.earned.title"
+msgstr "{name} alipata beji ya <b>{title}</b>"
 
-msgid "moment.video.watched.self.title"
-msgstr "Wewe ulitazama <b>{title}</b>"
+msgid "moment.bible.download.self.title"
+msgstr "Ulidownload toleo, <b>{version}</b>"
+
+msgid "moment.bible.download.title"
+msgstr "{name} alidownload toleo, <b>{version}</b>"
+
+msgid "moment.bookmark.self.title"
+msgstr "Ulialamisha <b>{reference_human}</b>"
+
+msgid "moment.bookmark.title"
+msgstr "{name} alialamisha <b>{reference_human}</b>"
+
+msgid "moment.friendship.self.title"
+msgstr "Sasa wewe ni rafiki na<b>{friend_name}</b>"
+
+msgid "moment.friendship.title"
+msgstr "{user_name} sasa ni rafiki na <b>{friend_name}</b>"
+
+msgid "moment.highlight.self.title"
+msgstr "Ulibainisha </b>{reference_human}</b>"
+
+msgid "moment.highlight.title"
+msgstr "{name} alibainisha  <b>{reference_human}</b>"
+
+msgid "moment.note.self.title"
+msgstr "uliongeza elezo ,<b>{title}</b>"
+
+msgid "moment.note.title"
+msgstr "{name} aliongeza elezo ,<b>{title}</b>"
+
+msgid "moment.plan_completion.self.title"
+msgstr "Mpango umekamilika"
+
+msgid "moment.plan_completion.title"
+msgstr "{name} amemaliza mpango"
+
+msgid "moment.plan_segment_completion.body"
+msgstr "Siku {segment} cha {total_segments} ({percent_complete}%)"
+
+msgid "moment.plan_segment_completion.self.title"
+msgstr "Umemaliza siku <b>{segment}</b> wa mpango, <b>{title}</b>"
+
+msgid "moment.plan_segment_completion.title"
+msgstr "{name} amemalliza siku <b>{segment}</b> wa mpango, <b>{title}</b>"
+
+msgid "moment.plan_subscription.self.title"
+msgstr "Mpango umeanzwa"
+
+msgid "moment.plan_subscription.title"
+msgstr "{name} umeanza mpango"
+
+msgid "moment.system.bible_series_promo.body"
+msgstr "Tazama <i>mfululizo wa Bibilia</i> leo usiku!"
+
+msgid "moment.system.bible_series_promo.title"
+msgstr "<i>Mfululizo wa bibilia</i>"
 
 msgid "moment.system.find_friends.title"
 msgstr "Apu ya Biblia ni bora zaidi ukiwa na Marafiki. Tafuta Marafiki zako kwenye Mawasiliano."
 
-msgid "notifications.friendships.offer"
-msgstr "{name} anataka kuwa rafiki yako wa YouVersion"
+msgid "moment.video.watched.self.title"
+msgstr "Wewe ulitazama <b>{title}</b>"
 
-msgid "notifications.friendships.accept"
-msgstr "{name} amekubali ombi lako la urafiki"
-
-msgid "notifications.friendships.nowfriends"
-msgstr "{name} sasa ni rafiki yako"
-
-msgid "notifications.friendships.suggestion"
-msgstr "Je unataka kuwa rafiki wa {name} kwenye YouVersion?"
+msgid "moment.video.watched.title"
+msgstr "{name} alitazama <b>{title}</b>"
 
 msgid "notifications.comments.moment.mine.bookmark"
 msgstr "{name} ametoa maoni kwenye alamisho lako: \"{comment}\""
 
+msgid "notifications.comments.moment.mine.friendship"
+msgstr "{name} ametoa maoni juu ya urafiki wako mpya na {friend_name}: \"{comment}\""
+
 msgid "notifications.comments.moment.mine.highlight"
 msgstr "{name} ametoa maoni kwenye onyesho lako: \"{comment}\""
+
+msgid "notifications.comments.moment.mine.note"
+msgstr "{name} ametoa maoni kwenye maelezo yako: \"{comment}\""
 
 msgid "notifications.comments.moment.mine.plan_activity"
 msgstr "{name} ametoa maoni juu ya mpango wako: \"{comment}\""
@@ -159,26 +132,65 @@ msgstr "{name} ametoa maoni juu ya mpango wako: \"{comment}\""
 msgid "notifications.comments.moment.mine.plan_activity.push"
 msgstr "{name} ametoa maoni juu ya mpango wa Biblia: \"{comment}\""
 
-msgid "notifications.comments.moment.mine.friendship"
-msgstr "{name} ametoa maoni juu ya urafiki wako mpya na {friend_name}: \"{comment}\""
+msgid "notifications.comments.moments.friend.bookmark"
+msgstr "{commenter_name} pia ametoa maoni kwenye {moment_owner_name}'s alamisho: \"{comment}\""
 
-msgid "notifications.comments.moment.mine.note"
-msgstr "{name} ametoa maoni kwenye maelezo yako: \"{comment}\""
+msgid "notifications.comments.moments.friend.friendship"
+msgstr "{commenter_name} pia ametoa maoni juu ya {moment_owner_name}'s urafiki mpya na {friend_name}: \"{comment}\""
+
+msgid "notifications.comments.moments.friend.highlight"
+msgstr "{commenter_name} pia ametoa maoni kwenye {moment_owner_name}'s onyesho: \"{comment}\""
+
+msgid "notifications.comments.moments.friend.note"
+msgstr "{commenter_name} pia ametoa maoni kwenye {moment_owner_name}'s maelezo: \"{comment}\""
+
+msgid "notifications.comments.moments.friend.owner.bookmark"
+msgstr "{moment_owner_name} pia wametoa maoni kwenye maalamisho yao: \"{comment}\""
+
+msgid "notifications.comments.moments.friend.owner.friendship"
+msgstr "{moment_owner_name} pia ametoa maoni juu ya urafiki wake mpya na {friend_name}: \"{comment}\""
+
+msgid "notifications.comments.moments.friend.owner.highlight"
+msgstr "{moment_owner_name} pia wametoa maoni kwenye maonyesho yao: \"{comment}\""
+
+msgid "notifications.comments.moments.friend.owner.note"
+msgstr "{moment_owner_name} pia wametoa maoni kwenye maelezo yao: \"{comment}\""
+
+msgid "notifications.comments.moments.friend.owner.plan_activity"
+msgstr "{moment_owner_name} pia ametoa maoni juu ya Mpango wake: \"{comment}\""
+
+msgid "notifications.comments.moments.friend.owner.plan_activity.push"
+msgstr "{moment_owner_name} pia ametoa maoni juu ya Mpango wake wa Biblia: \"{comment}\""
+
+msgid "notifications.comments.moments.friend.plan_activity"
+msgstr "{commenter_name} pia ametoa maoni juu ya Mpango wa {moment_owner_name}: \"{comment}\""
+
+msgid "notifications.comments.moments.friend.plan_activity.push"
+msgstr "{commenter_name} pia ametoa maoni juu ya Mpango wa Biblia ya {moment_owner_name}: \"{comment}\""
+
+msgid "notifications.friendships.accept"
+msgstr "{name} amekubali ombi lako la urafiki"
+
+msgid "notifications.friendships.nowfriends"
+msgstr "{name} sasa ni rafiki yako"
+
+msgid "notifications.friendships.offer"
+msgstr "{name} anataka kuwa rafiki yako wa YouVersion"
+
+msgid "notifications.friendships.suggestion"
+msgstr "Je unataka kuwa rafiki wa {name} kwenye YouVersion?"
 
 msgid "notifications.likes.moment.mine.bookmark"
 msgstr "{name} amependa alamisho lako, {reference_human}"
 
+msgid "notifications.likes.moment.mine.friendship"
+msgstr "{name} amependa urafiki wako mpya na {friend_name}"
+
 msgid "notifications.likes.moment.mine.highlight"
 msgstr "{name} amependa onyesho lako, {reference_human}"
 
-msgid "notifications.likes.moment.mine.plan_activity"
-msgstr "{name} amependa shughuli za Mpango wako"
-
-msgid "notifications.likes.moment.mine.plan_activity.push"
-msgstr "{name} amependa shughuli za Mpango wako wa Biblia"
-
-msgid "notifications.likes.moment.mine.friendship"
-msgstr "{name} amependa urafiki wako mpya na {friend_name}"
+msgid "notifications.likes.moment.mine.note.no_title_no_reference"
+msgstr "{name} amependa maelezo yako"
 
 msgid "notifications.likes.moment.mine.note.reference"
 msgstr "{name} amependa maelezo yako juu ya, {reference_human}"
@@ -186,44 +198,11 @@ msgstr "{name} amependa maelezo yako juu ya, {reference_human}"
 msgid "notifications.likes.moment.mine.note.title"
 msgstr "{name} amependa maelezo yako, \"{title}\""
 
-msgid "notifications.likes.moment.mine.note.no_title_no_reference"
-msgstr "{name} amependa maelezo yako"
+msgid "notifications.likes.moment.mine.plan_activity"
+msgstr "{name} amependa shughuli za Mpango wako"
 
-msgid "notifications.comments.moments.friend.owner.bookmark"
-msgstr "{moment_owner_name} pia wametoa maoni kwenye maalamisho yao: \"{comment}\""
-
-msgid "notifications.comments.moments.friend.bookmark"
-msgstr "{commenter_name} pia ametoa maoni kwenye {moment_owner_name}'s alamisho: \"{comment}\""
-
-msgid "notifications.comments.moments.friend.owner.friendship"
-msgstr "{moment_owner_name} pia ametoa maoni juu ya urafiki wake mpya na {friend_name}: \"{comment}\""
-
-msgid "notifications.comments.moments.friend.friendship"
-msgstr "{commenter_name} pia ametoa maoni juu ya {moment_owner_name}'s urafiki mpya na {friend_name}: \"{comment}\""
-
-msgid "notifications.comments.moments.friend.owner.highlight"
-msgstr "{moment_owner_name} pia wametoa maoni kwenye maonyesho yao: \"{comment}\""
-
-msgid "notifications.comments.moments.friend.highlight"
-msgstr "{commenter_name} pia ametoa maoni kwenye {moment_owner_name}'s onyesho: \"{comment}\""
-
-msgid "notifications.comments.moments.friend.owner.plan_activity"
-msgstr "{moment_owner_name} pia ametoa maoni juu ya Mpango wake: \"{comment}\""
-
-msgid "notifications.comments.moments.friend.plan_activity"
-msgstr "{commenter_name} pia ametoa maoni juu ya Mpango wa {moment_owner_name}: \"{comment}\""
-
-msgid "notifications.comments.moments.friend.owner.plan_activity.push"
-msgstr "{moment_owner_name} pia ametoa maoni juu ya Mpango wake wa Biblia: \"{comment}\""
-
-msgid "notifications.comments.moments.friend.plan_activity.push"
-msgstr "{commenter_name} pia ametoa maoni juu ya Mpango wa Biblia ya {moment_owner_name}: \"{comment}\""
-
-msgid "notifications.comments.moments.friend.owner.note"
-msgstr "{moment_owner_name} pia wametoa maoni kwenye maelezo yao: \"{comment}\""
-
-msgid "notifications.comments.moments.friend.note"
-msgstr "{commenter_name} pia ametoa maoni kwenye {moment_owner_name}'s maelezo: \"{comment}\""
+msgid "notifications.likes.moment.mine.plan_activity.push"
+msgstr "{name} amependa shughuli za Mpango wako wa Biblia"
 
 msgid "notifications.moments.create.bookmark"
 msgstr "{name} alialamisha {reference_human}"
@@ -231,20 +210,14 @@ msgstr "{name} alialamisha {reference_human}"
 msgid "notifications.moments.create.highlight"
 msgstr "{name} alibainisha {reference_human}"
 
+msgid "notifications.moments.create.note.no_title_no_reference"
+msgstr "{name} ameongeza maelezo"
+
 msgid "notifications.moments.create.note.reference"
 msgstr "{name} ameongeza maelezo kwenye {reference_human}"
 
 msgid "notifications.moments.create.note.title"
 msgstr "{name} ameongeza maelezo, \"{title}\""
-
-msgid "notifications.moments.create.note.no_title_no_reference"
-msgstr "{name} ameongeza maelezo"
-
-msgid "notifications.moments.create.plan_subscription"
-msgstr "{name} ameanza Mpango mpya, {title}"
-
-msgid "notifications.moments.create.plan_subscription.push"
-msgstr "{name} ameanza Mpango mpya wa Biblia, {title}"
 
 msgid "notifications.moments.create.plan_completion"
 msgstr "{name} amemaliza Mpango wake, {title}"
@@ -252,38 +225,41 @@ msgstr "{name} amemaliza Mpango wake, {title}"
 msgid "notifications.moments.create.plan_completion.push"
 msgstr "{name} amemaliza Mpango wake wa Biblia, {title}"
 
-#. TRANSLATORS: Plural test
-msgid "notifications.friendships.count"
-msgid_plural "You have %d friend requests"
-msgstr[0] "Unaombi la urafiki "
-msgstr[1] "Una %d maombi ya urafiki"
+msgid "notifications.moments.create.plan_subscription"
+msgstr "{name} ameanza Mpango mpya, {title}"
+
+msgid "notifications.moments.create.plan_subscription.push"
+msgstr "{name} ameanza Mpango mpya wa Biblia, {title}"
 
 msgid "notifications.system.test"
 msgstr "Pata Apu yetu ya Biblia ya watoto sasa!!!"
 
-msgid "share.invite_sms_prefix"
-msgstr "Kutoka Kwa {name}:"
-
-msgid "share.invite_sms"
-msgstr "Je unayo Apu ya Biblia kutoka kwa YouVersion? Ninaipenda, na ninadhani utaipenda pia. Kiungo kipo hapa:"
-
-msgid "share.invite_email_subject"
-msgstr "Je unayo Apu ya Biblia?"
+msgid "share.find_friends.invite_email_html"
+msgstr "<p>Jambo!</p><p> Natumia Bible App kutoka YouVersion na ningetaka uniunge. Kama wewe ni mtumizi mgeni, ni njia rahisi ya kuleta ukweli na uzuri wa Bibilia katika maisha yetu ya kilasiku.</p><p><strong>Pata Bible App:</strong>soma, tazama, sikiza na shirikisha bibilia kwenye rununu au tarakilishi katika Bible.com</p><p><strong>Tengeneza Akaunti</strong> jiunge na mipango ya usomaji wa bibilia na pata fursa ya kutazama alamisho, mambo muhimu na maelezo katika rununu yako</p><p><strong>Ongeza Marafiki (kama mimi!)</strong>Chunguza na jadili bibilia na watu unaowajali</p><p>Haya yote yanapatikana kwenye Bible App- anaza hapa:</p>"
 
 msgid "share.invite_email_body"
 msgstr ""
 "Nimekuwa nikifurahia Apu ya Biblia kutoka YouVersion na nadhani unaweza kuipenda pia. Nafungua Biblia mara nyingi zaidi siku hizi kwa sababu ni rahisi kusoma, kuangalia, kusikiliza, na kushiriki. Hata ina Mipango pia, ambayo inauteuzi wa Biblia iliyochaguliwa kwa ajili yangu na kunisubiri kila siku.  \n"
 "\n"
-"Unaweza kupata (bure!) hapa kwenye karibia  simu yoyote ya mkononi:"
+"Unaweza kupata (bure!) hapa kwenye karibia  simu yoyote ya mkononi: "
 
-msgid "share.invite_twitter"
-msgstr "Apu ya Biblia ya YouVersion inasehemu maalum hapa kwenye sreeni yangu. Soma, angalia, sikiliza, na shirikikisha...vyote ni bure kwenye apu:"
-
-msgid "share.invite_twitter_direct"
-msgstr "Je unayo Apu ya Biblia kutoka @YouVersion? Ninaipenda, na ninadhani utaipenda pia. Kiungo kipo hapa:"
+msgid "share.invite_email_subject"
+msgstr "Je unayo Apu ya Biblia?"
 
 msgid "share.invite_facebook"
 msgstr "Naipenda Apu ya Biblia! Kwa kweli imenisaidia kufanya Biblia kuwa sehemu ya maisha yangu ya kila siku. Unaweza alamisha, kusikiliza biblia kwa kutumia biblia ya sauti, kuandika maelezo, kufuata mipango ya ibada...hata kuangalia video! nenda udownload sasa hivi (ni bure):"
 
 msgid "share.invite_facebook_direct"
 msgstr "Je unayo Apu ya Biblia? Ninaipenda, na ninadhani utaipenda pia. Kiungo kipo hapa:"
+
+msgid "share.invite_sms"
+msgstr "Je unayo Apu ya Biblia kutoka kwa YouVersion? Ninaipenda, na ninadhani utaipenda pia. Kiungo kipo hapa:"
+
+msgid "share.invite_sms_prefix"
+msgstr "Kutoka Kwa {name}:"
+
+msgid "share.invite_twitter"
+msgstr "Apu ya Biblia ya YouVersion inasehemu maalum hapa kwenye sreeni yangu. Soma, angalia, sikiliza, na shirikikisha...vyote ni bure kwenye apu:"
+
+msgid "share.invite_twitter_direct"
+msgstr "Je unayo Apu ya Biblia kutoka @YouVersion? Ninaipenda, na ninadhani utaipenda pia. Kiungo kipo hapa:"
